[project]
name = "flovyn"
version = "0.1.0"
description = "Python SDK for Flovyn workflow orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Flovyn", email = "dev@flovyn.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["workflow", "orchestration", "durable", "async"]

dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "testcontainers>=3.7",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://flovyn.ai"
Documentation = "https://docs.flovyn.ai"
Repository = "https://github.com/flovyn/sdk-python"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flovyn*"]

[tool.setuptools.package-data]
"flovyn._native" = ["*.so", "*.dylib", "*.dll"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30  # 30 second timeout per test
# By default, exclude E2E tests. Run with: pytest -m e2e
addopts = "-m 'not e2e'"
markers = [
    "e2e: marks tests as end-to-end tests (require Docker)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Logging configuration for better test debugging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "flovyn._native.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["flovyn/_native/flovyn_worker_ffi.py"]  # auto-generated by uniffi

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM115",  # context manager for opening files (we need to keep files open longer)
]

[tool.ruff.lint.isort]
known-first-party = ["flovyn"]
